--- a/source-css/flutterlounge.css
+++ b/source-css/flutterlounge.css
@@ -102,6 +102,15 @@ a[href|="/shydance"] {
     height: 400px;
     background-image: url(%%shydance%%)
     }
+a[href|="/shyshake"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 300px;
+    height: 300px;
+    background-image: url(%%shyshake%%)
+    }
+
 
 /* Space thingy */
 a[href|="/sp"] {
