--- a/source-css/mylittleandysonic1.css
+++ b/source-css/mylittleandysonic1.css
@@ -1,3 +1,5 @@
+.id-t3_145m8r.link .title{font-size:large}
+
 /* Changes background  */
 body:first-of-type, body.res-nightmode:first-of-type {
     background:  url(%%bubble%%)  no-repeat  fixed 60% 100% !important;
@@ -420,15 +422,18 @@ a[href|='/trixfun'] {width:226px; height:152px; background-position: -0px -927px
 a[href|='/twifun'] {width:230px; height:152px; background-position: -0px -471px}
 
 
-a[href|='/applepie'], a[href|='/nolove'] {
+a[href|='/applepie'], a[href|='/esplinpoker'], a[href|='/nolove'], a[href|='/surbarf'], a[href|='/sursmelledyourcloset'], a[href|='/trixieplot'] {
     display: block;
     clear: none;
     float: left;
     background-image: url(%%table11%%)
     }
 
-a[href|='/applepie'] {width:207px; height:177px; background-position: -0px -252px}
-a[href|='/nolove'] {width:206px; height:252px; background-position: -0px -0px}
+a[href|='/applepie'] {width:207px; height:177px; background-position: -0px -368px}
+a[href|='/esplinpoker'] {width:120px; height:111px; background-position: -0px -0px}
+a[href|='/nolove'] {width:206px; height:252px; background-position: -0px -116px}
+a[href|='/surbarf'], a[href|='/sursmelledyourcloset'] {width:273px; height:152px; background-position: -0px -545px}
+a[href|='/trixieplot'] {width:152px; height:116px; background-position: -120px -0px}
 
 
 a[href|='/bmwat'], a[href|='/ch35'], a[href|='/chnuzzle'], a[href|='/cheerious'], a[href|='/cheerlikesit'], a[href|='/cmcexcited'], a[href|='/cordwithit'], a[href|='/crazypie'], a[href|='/derpoops'], a[href|='/disamused'], a[href|='/disangry'], a[href|='/disexcited'], a[href|='/diskate'], a[href|='/foryou'], a[href|='/genetics'], a[href|='/genius'], a[href|='/gildafury'], a[href|='/herhorn'], a[href|='/gildafriendship'], a[href|='/hipstertrixie'], a[href|='/iwapprove'], a[href|='/noidea'], a[href|='/notenoughbooks'], a[href|='/rarimad'], a[href|='/twinuzzle'] {
@@ -501,7 +506,7 @@ a[href|='/twiread'] {width:253px; height:108px; background-position: -0px -2120p
 a[href|='/wuna'] {width:146px; height:202px; background-position: -0px -433px}
 
 
-a[href|='/cowpony'], a[href|='/creamsicle'], a[href|='/diswut'], a[href|='/dod'], a[href|='/dresscord'], a[href|='/ishygdadt'], a[href|='/eagleeye'], a[href|='/hawkeye'], a[href|='/flutterpout'], a[href|='/frightenpie'], a[href|='/inurbutt'], a[href|='/lunadark'], a[href|='/macgasp'], a[href|='/ppfof'], a[href|='/ppsly'], a[href|='/psychiatwi'], a[href|='/twithis'], a[href|='/queencheer'], a[href|='/rarhorror'], a[href|='/rosefof'], a[href|='/sbshy'], a[href|='/scootscared'], a[href|='/sexymac'], a[href|='/soarinshock'], a[href|='/twicake'], a[href|='/twiglare'], a[href|='/twiteehee'], a[href|='/twiteeth'] {
+a[href|='/cowpony'], a[href|='/creamsicle'], a[href|='/crossdresscord'], a[href|='/ishygdadt'], a[href|='/diswut'], a[href|='/dod'], a[href|='/dresscord'], a[href|='/eagleeye'], a[href|='/hawkeye'], a[href|='/flutterpout'], a[href|='/frightenpie'], a[href|='/inurbutt'], a[href|='/lunadark'], a[href|='/macgasp'], a[href|='/ppfof'], a[href|='/ppsly'], a[href|='/psychiatwi'], a[href|='/twithis'], a[href|='/queencheer'], a[href|='/rarhorror'], a[href|='/rosefof'], a[href|='/sbshy'], a[href|='/scootscared'], a[href|='/sexymac'], a[href|='/soarinshock'], a[href|='/twicake'], a[href|='/twiglare'], a[href|='/twiteehee'], a[href|='/twiteeth'] {
     display: block;
     clear: none;
     float: left;
@@ -510,10 +515,10 @@ a[href|='/cowpony'], a[href|='/creamsicle'], a[href|='/diswut'], a[href|='/dod']
 
 a[href|='/cowpony'] {width:147px; height:177px; background-position: -0px -2022px}
 a[href|='/creamsicle'] {width:127px; height:163px; background-position: -0px -2775px}
+a[href|='/crossdresscord'], a[href|='/ishygdadt'] {width:251px; height:202px; background-position: -0px -0px}
 a[href|='/diswut'] {width:174px; height:202px; background-position: -0px -960px}
 a[href|='/dod'] {width:110px; height:127px; background-position: -141px -2478px}
 a[href|='/dresscord'] {width:158px; height:252px; background-position: -0px -1466px}
-a[href|='/dresscord'], a[href|='/ishygdadt'] {width:251px; height:202px; background-position: -0px -0px}
 a[href|='/eagleeye'], a[href|='/hawkeye'] {width:160px; height:152px; background-position: -0px -1314px}
 a[href|='/flutterpout'] {width:130px; height:127px; background-position: -0px -2648px}
 a[href|='/frightenpie'] {width:113px; height:152px; background-position: -130px -2757px}
@@ -668,7 +673,7 @@ a[href|="/ppsign"] em{
     }   
 a[href|='/ppsign'] {width:141px; height:200px; background-position: -170px -154px}
 
-a[href='/ajsay'],  a[href='/bonshades'], a[href='/daring'],  a[href='/derpquite'], a[href='/disshrug'],  a[href='/fluffycord'],a[href='/gildafuck'], a[href='/oppositesattract'],a[href='/pphappy'], a[href='/pphmmm'],  a[href='/ppthink'], a[href='/pptrain'], a[href='/rarirage'],a[href='/rdpoker'], a[href='/slowcord'],a[href='/twiststare'], a[href='/twiyou'], a[href='/ppducreux'], a[href='/raripout'] {
+a[href='/ajsay'],  a[href='/bonshades'], a[href='/daring'],  a[href='/derpquite'], a[href='/disshrug'],  a[href='/fluffycord'],a[href='/gildafuck'], a[href='/oppositesattract'],a[href='/pphappy'], a[href='/pphmmm'],  a[href='/ppthink'], a[href='/pptrain'], a[href='/rarirage'],a[href='/rdpoker'], a[href='/slowcord'],a[href='/twiststare'], a[href='/twiyou'], a[href='/ppducreux'], a[href='/raripout'], a[href='/trixiestahp'] {
 
     display: block;
     clear: none;
@@ -694,6 +699,7 @@ a[href|='/twiststare']  {width:73px; height:70px; background-position: -2px -2px
 a[href|='/twiyou']  {width:99px; height:120px; background-position: -364px -119px}
  a[href='/ppducreux']{width:100px; height:200px; background-position: -221px -747px}
  a[href='/raripout']{width:167px; height:150px; background-position: -296px -582px}
+a[href='/trixiestahp']{width:100px; height:60px; background-position: -355px -770px}
 
 a[href|='/ajcake'],a[href|='/ajsoawesome'],a[href|='/ccthis'],a[href|='/daisythis'],a[href|='/dashcute'],a[href|='/dashshades'],a[href|='/dashthisshit'],a[href|='/derpyfacehoof'],a[href|='/onederp'],a[href|='/ppbusiness'],a[href|='/pphorn'],a[href|='/ppjuice'],a[href|='/ppspy'],a[href|='/ppspywhat'],a[href|='/ppthisshit'],a[href|='/prettypone'],a[href|='/raridance'],a[href|='/rariexcited'],a[href|='/rarisoawesome'],a[href|='/shysoawesome'],a[href|='/twiquite'],a[href|='/twisit'],a[href|='/twisoawesome'],a[href|='/twithisshit']{
 
@@ -1003,6 +1009,7 @@ height:30px
 }
 
 /* Adding after-text to somebody's name? Add them here. */
+a.author[href$="SRSaboutponies"]:after,
 a.author[href$="Sponce"]:after,
 a.author[href$=HtotheGRIFF]:after,
 a.author[href$=scriptea]:after ,
@@ -1060,6 +1067,7 @@ letter-spacing:normal;
 }
 
 /* After-name text goes here. */ 
+a.author[href$="SRSaboutponies"]:after {content: "(trolls trolling trolls trolling trolling trolls)"}
 a.author[href$="Sponce"]:after { content:" (liek dis if u cry evry time)"}
 a.author[href$=HtotheGRIFF]:after  { content:" (Is very mad)"}
 a.author[href$=scriptea]:after { content:"Too main pone for background pone status)" }
@@ -1191,8 +1199,9 @@ a[href|="/luna!"]:nth-of-type(n) { font-size: 18px; font-variant: small-caps !im
 
 a[href|="/hoppy"] { display: block; clear: none; float: left; background-image: url(%%Umrzj%%); width: 105px; height: 157px; background-position: -0px -0px }
 
-a.author[href$="Pathogen-David"], a.author[href$="Phei"] { font-weight: bold; color: #662D8A }
-body.res a.author[href$="Pathogen-David"], body.res a.author[href$="Phei"] { color: white !important; padding: 0 2px; border-radius: 3px; background-color: #662D8A }
+body.res a.author[href$="Pathogen-David"], body.res a.author[href$="Phei"] { font-weight: bold; color: white !important; padding: 0 2px; border-radius: 3px }
+body.res a.author[href$="Phei"] { background-color: #D4A4E8 }
+body.res a.author[href$="Pathogen-David"] { background-color: #662D8A }
 
 /* PROPER GREENTEXT (stolen from plounge, which stole from /r/4chan) */
 .content .md h1 { color: #789922; border-bottom: none; padding-bottom: 0px }
