--- a/source-css/mylittlelistentothis.css
+++ b/source-css/mylittlelistentothis.css
@@ -1086,7 +1086,7 @@ NEW CSS END
 
 /* Unique Emotes */
 /* Sheet 1 */
-a[href|="/flutterwonder"], a[href|="/system"], a[href|="/classyspitfire"], a[href|="/flimflamwoo"], a[href|="/discordcool"], a[href|="/rarityumm"], a[href|="/pokerlee"], a[href|="/dropdabass"], a[href|="/discordsing"], a[href|="/spit18"], a[href|="/pens"], a[href|="/fdbacon"], a[href|="/jfish"]
+a[href|="/flutterwonder"], a[href|="/system"], a[href|="/classyspitfire"], a[href|="/flimflamwoo"], a[href|="/discordcool"], a[href|="/rarityumm"], a[href|="/pokerlee"], a[href|="/dropdabass"], a[href|="/discordsing"], a[href|="/spit18"],a[href|="/bandalo"], a[href|="/pens"], a[href|="/fdbacon"], a[href|="/jfish"]
 {
     background-image: url(%%Emotes1%%) !important;
     clear: none;
@@ -1137,7 +1137,7 @@ a[href|="/pokerlee"]
 {
     background-position: -182px -182px;
 }
-a[href|="/spit18"]
+a[href|="/spit18"],a[href|="/bandalo"]
 {
     background-position: 0 -273px;
 }
