--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -1,7 +1,7 @@
 /***********************************
 * Whoa CMC, you keep editing that CSS ya gonna get a wicked bad tummy ache.  *
 ***********************************/
-/*Last edited by Megadeus on Sept 29th, 2007 1:17 UTC*/
+/*Last edited by Shirtbrony on Smarch 13th, 1997 13:13 UTC*/
 /*
 Rule #1: Do NOT get Fluttershy started on the fauna!
 Rule #2: Do NOT make the CSS herp the derp
@@ -1661,10 +1661,10 @@ content:"";
 .titlebox .usertext-body .md ol li + li {
     display:inline-block;
     float:right;
-    background:url(%%ajfillyhat%%);
-    width:65px;
+    background:url(%%discentia-hat%%);
+    width:60px;
     height:60px;
-    margin-top:-31px;
+    margin-top:-37px;
     margin-left:4px;
     margin-bottom:-14px;
     margin-right:-40px;
@@ -2238,7 +2238,7 @@ a.thumbnail.self
 /*Some spacing stuff on the bottom*/
 .side .md {padding-bottom:20px;}
 
-/*Begin generated CSS, last generated Mon, 23 Jul 2012 00:56:44 +0000*/
+/*Begin generated CSS, last generated Thu, 29 Nov 2012 22:33:17 +0000*/
 /*A TABLE*/
 .side .md table:nth-of-type(1) tr:nth-of-type(2) td:nth-of-type(2):after {content:"ajlie"}
 .side .md table:nth-of-type(1) tr:nth-of-type(1) td:nth-of-type(2):after {background-position:-0% -0%}
@@ -2246,12 +2246,26 @@ a.thumbnail.self
 .side .md table:nth-of-type(1) tr:nth-of-type(1) td:nth-of-type(3):after {background-position:-100% -0%}
 .side .md table:nth-of-type(1) tr:nth-of-type(2) td:nth-of-type(4):after {content:"flutterjerk"}
 .side .md table:nth-of-type(1) tr:nth-of-type(1) td:nth-of-type(4):after {background-position:-200% -0%}
-
-.side .md table:nth-of-type(1) tr td:nth-of-type(5):after {background-image:none !important;}
-
 .side .md table:nth-of-type(1) tr:nth-of-type(2) td:nth-of-type(5):after {content:"flutterroll"}
-.side .md table:nth-of-type(1) tr:nth-of-type(1) td:nth-of-type(5):after {background-image:url(%%amotes%%) !important;background-position:-300% -0%}
-
+.side .md table:nth-of-type(1) tr:nth-of-type(1) td:nth-of-type(5):after {background-position:-300% -0%}
+.side .md table:nth-of-type(1) tr:nth-of-type(4) td:nth-of-type(5):after {content:"spikemeh"}
+.side .md table:nth-of-type(1) tr:nth-of-type(3) td:nth-of-type(5):after {background-position:-300% -100%}
+.side .md table:nth-of-type(1) tr:nth-of-type(6) td:nth-of-type(5):after {content:"abmeh"}
+.side .md table:nth-of-type(1) tr:nth-of-type(5) td:nth-of-type(5):after {background-position:-300% -200%}
+.side .md table:nth-of-type(1) tr:nth-of-type(8) td:nth-of-type(5):after {content:"scootaderp"}
+.side .md table:nth-of-type(1) tr:nth-of-type(7) td:nth-of-type(5):after {background-position:-300% -300%}
+.side .md table:nth-of-type(1) tr:nth-of-type(10) td:nth-of-type(5):after {content:"pinkieawe"}
+.side .md table:nth-of-type(1) tr:nth-of-type(9) td:nth-of-type(5):after {background-position:-300% -400%}
+.side .md table:nth-of-type(1) tr:nth-of-type(12) td:nth-of-type(5):after {content:"silverspoon"}
+.side .md table:nth-of-type(1) tr:nth-of-type(11) td:nth-of-type(5):after {background-position:-300% -500%}
+.side .md table:nth-of-type(1) tr:nth-of-type(14) td:nth-of-type(5):after {content:""}
+.side .md table:nth-of-type(1) tr:nth-of-type(13) td:nth-of-type(5):after {background-position:-300% -600%}
+.side .md table:nth-of-type(1) tr:nth-of-type(16) td:nth-of-type(5):after {content:""}
+.side .md table:nth-of-type(1) tr:nth-of-type(15) td:nth-of-type(5):after {background-position:-300% -700%}
+.side .md table:nth-of-type(1) tr:nth-of-type(18) td:nth-of-type(5):after {content:""}
+.side .md table:nth-of-type(1) tr:nth-of-type(17) td:nth-of-type(5):after {background-position:-300% -800%}
+.side .md table:nth-of-type(1) tr:nth-of-type(20) td:nth-of-type(5):after {content:""}
+.side .md table:nth-of-type(1) tr:nth-of-type(19) td:nth-of-type(5):after {background-position:-300% -900%}
 .side .md table:nth-of-type(1) tr:nth-of-type(4) td:nth-of-type(2):after {content:"twipride"}
 .side .md table:nth-of-type(1) tr:nth-of-type(3) td:nth-of-type(2):after {background-position:-0% -100%}
 .side .md table:nth-of-type(1) tr:nth-of-type(4) td:nth-of-type(3):after {content:"celestiamad"}
@@ -2367,7 +2381,7 @@ a.thumbnail.self
 .side .md table:nth-of-type(2) tr:nth-of-type(15) td:nth-of-type(2):after {background-position:-0% -700%}
 .side .md table:nth-of-type(2) tr:nth-of-type(16) td:nth-of-type(3):after {content:"twisquint"}
 .side .md table:nth-of-type(2) tr:nth-of-type(15) td:nth-of-type(3):after {background-position:-100% -700%}
-.side .md table:nth-of-type(2) tr:nth-of-type(16) td:nth-of-type(4):after {content:"raritywhine"}
+.side .md table:nth-of-type(2) tr:nth-of-type(16) td:nth-of-type(4):after {content:"rairtywhine"}
 .side .md table:nth-of-type(2) tr:nth-of-type(15) td:nth-of-type(4):after {background-position:-200% -700%}
 .side .md table:nth-of-type(2) tr:nth-of-type(16) td:nth-of-type(5):after {content:"rdcool"}
 .side .md table:nth-of-type(2) tr:nth-of-type(15) td:nth-of-type(5):after {background-position:-300% -700%}
