--- a/source-css/pankakke.css
+++ b/source-css/pankakke.css
@@ -9,6 +9,9 @@
 /*
 CSS shamelessly ripped from a variety of sources, 
 and edited whilst plastered.
+
+- ...Dammit System...
+
 */
 
 
@@ -34,6 +37,7 @@ JustAnotherGDB
 - Fixed Zealot's emote, used the previous version for Sprankton, added pgaben emote (9/1)
 - Added a new emote for DoctorDrunk (9/13)
 - Emote for Fearless (9/18)
+- Lots-a-new emotes in the interim (10/1 - 11/3)
 
 MisanthropicCat
 - Is a kitty
@@ -41,6 +45,8 @@ MisanthropicCat
 
 Conky
 - Conked the mutherfucking Conk out of shit.
+
+- ...Dammit System...
 
 */
 
@@ -253,7 +259,7 @@ a[href|="/evanmacave"] {
     }
 
 /************MLP-LRG*************/
-a[href|="/pghoofpump"], a[href|="/pgshock"], a[href|="/pglegcross"], a[href|="/pgshuffle"], a[href|="/ponykakke"], a[href|="/gdb"], a[href|="/gdbsmirk"],  a[href|="/dinsfire"], a[href|="/dintrot"],  a[href|="/sprankton"], a[href|="/sistersprankton"], a[href|="/flutterhey"], a[href|="/zealot"], a[href|="/sisterzealot"], a[href|="/octaviagasm"], a[href|="/mangohug"], a[href|="/petra"], a[href|="/acer"], a[href|="/darkman"], a[href|="/calcos"], a[href|="/synesthesia"], a[href|="/srslypickled"] {
+a[href|="/pghoofpump"], a[href|="/pgshock"], a[href|="/pglegcross"], a[href|="/pgshuffle"], a[href|="/ponykakke"], a[href|="/gdb"], a[href|="/gdbsmirk"],  a[href|="/dinsfire"], a[href|="/dintrot"],  a[href|="/sprankton"], a[href|="/sistersprankton"], a[href|="/flutterhey"], a[href|="/zealot"], a[href|="/sisterzealot"], a[href|="/octaviagasm"], a[href|="/mangohug"], a[href|="/petra"], a[href|="/acer"], a[href|="/darkman"], a[href|="/calcos"], a[href|="/synesthesia"], a[href|="/srslypickled"], a[href|="/twinazi"]{
     display: block;
     clear: none;
     float: left;
@@ -347,6 +353,10 @@ a[href|="/synesthesia"] {
 a[href|="/srslypickled"] {
     background-position: -2114px -0px;
     width: 158px
+    }
+a[href|="/twinazi"] {
+    background-position: -2272px -0px;
+    width: 155px
     }
 
 /***********MLP-XLRG*************/
