--- a/source-css/tacoshy.css
+++ b/source-css/tacoshy.css
@@ -54,6 +54,16 @@ ________________________________________________▓▓▓▓▓▓▓
 
 /*------------ User Emotes ------------------*/
 
+a[href|="/tacodance"] {
+    background-position: 0px 0px;
+    display: block;
+    clear: none;
+    float: left;
+    width: 330px;
+    height: 400px;
+    background-image: url(%%tacodance%%)
+    }
+
 a[href|="/t18"] {
     background-position: 0px 0px;
     display: block;
