--- a/source-css/speedingturtle.css
+++ b/source-css/speedingturtle.css
@@ -1,23 +1,3 @@
-.titlebox form {
-    position: static
-    }
-.titlebox .usertext-body .md ol {
-    list-style: none;
-    position: absolute;
-    z-index: 200;
-    margin: 0;
-    padding: 0;
-    left: 170px;
-    top: 22px;
-    /*height: 47px;*/
-    overflow: hidden
-    }
-.titlebox .usertext-body .md ol li {
-    display: -moz-inline-box;
-    display: inline-block;
-    margin-top: 2px;
-    padding: 0 3px 8px 3px
-    }
 
 /** OH GOD A TABLE**/
 
@@ -154,3 +134,40 @@ a[href|="/prepareyouranus"] {
     height: 100px;
     background-position: -0px -0px
     }
+
+.content {
+    margin-top: 40px
+    }
+.pagename {
+    font-size: 12pt
+    }
+.titlebox form {
+    position: static
+    }
+.titlebox .usertext-body .md ol {
+    width: auto;
+    border: 1px solid #5f99cf;
+    position: absolute;
+    top: 27px;
+    left: 220px;
+    z-index: 500;
+    margin: 28px 310px 0 0;
+    padding: 3px 3px 3px 3px;
+    list-style: none;
+    display: block;
+    white-space: normal;
+    overflow: hidden;
+    border-radius:7px
+    }
+.titlebox .usertext-body .md ol li {
+    margin: 4px;
+    list-style: none
+    }
+
+
+/* Settings */
+#newlink .infobar:before{content:"Do not post Hoof Beat 2 or any other pay to view works unless the artist or author has allowed it to be released publicly."}
+
+
+/* Supporting Code */
+#newlink .infobar:before{display:block;border:1px solid red;background:#F77;padding:5px;margin-bottom:5px}
