--- a/source-css/thebestpony.css
+++ b/source-css/thebestpony.css
@@ -310,36 +310,6 @@ a.author[href$="/Chuck_Finnley"]:after {
     display: block;
     letter-spacing: normal
     }
-/*DainbowRash101*/
-a.author[href$="/1337mon"] {
-    font-size: 0px !important;
-    display: inline-block;
-    vertical-align: bottom;
-    overflow: hidden;
-    letter-spacing: -20px
-    }
-a.author[href$="/1337mon"]:after {
-    content: "DainbowRash101";
-    font-size: 10px !important;
-    visibility: visible !important;
-    display: block;
-    letter-spacing: normal
-    }
-/*DemenetedMan*/
-a.author[href$="/alexwars1"] {
-    font-size: 0px !important;
-    display: inline-block;
-    vertical-align: bottom;
-    overflow: hidden;
-    letter-spacing: -20px
-    }
-a.author[href$="/alexwars1"]:after {
-    content: "DementedMan";
-    font-size: 10px !important;
-    visibility: visible !important;
-    display: block;
-    letter-spacing: normal
-    }
 /*CelesbiasBeard*/
 a.author[href$="/Androecian"] {
     font-size: 0px !important;
@@ -403,7 +373,6 @@ a.author[href$="/lord_terrene"]:after {
 /*******
 *Sidebar*
 *******/
-
 /* Magically appearing emote table */
 .titlebox table {
     display: none;
@@ -1174,7 +1143,7 @@ a[href|="/rbpd29"], a[href|="/ryuno"] {
     background-position: -350px -630px
     }
 /*BPD2 emutes*/
-a[href|="/bpd30"], a[href|="/rbpd30"], a[href|="/scootsassin"], a[href|="/rscootsassin"], a[href|="/bpd31"], a[href|="/rbpd31"], a[href|="/shutterfly"], a[href|="/rshutterfly"], a[href|="/bpd32"], a[href|="/rbpd32"], a[href|="/rarpleased"], a[href|="/rrarpleased"], a[href|="/bpd33"], a[href|="/rbpd33"], a[href|="/fsfear"], a[href|="/rfsfear"] {
+a[href|="/bpd30"], a[href|="/rbpd30"], a[href|="/scootsassin"], a[href|="/rscootsassin"], a[href|="/bpd31"], a[href|="/rbpd31"], a[href|="/shutterfly"], a[href|="/rshutterfly"], a[href|="/bpd32"], a[href|="/rbpd32"], a[href|="/rarpleased"], a[href|="/rrarpleased"], a[href|="/bpd33"], a[href|="/rbpd33"], a[href|="/fsfear"], a[href|="/rfsfear"],  a[href|="/bpd34"], a[href|="/rbpd34"], a[href|="/sbshake"], a[href|="/rsbshake"], a[href|="/bpd35"], a[href|="/rbpd35"], a[href|="/babssmirk"], a[href|="/rbabssmirk"], a[href|="/bpd36"], a[href|="/rbpd36"], a[href|="/trixiestahp"], a[href|="/rtrixiestahp"] {
     display: block; 
     clear: none;
     float: left;
@@ -1205,6 +1174,24 @@ a[href|="/bpd33"], a[href|="/fsfear"] {
     }
 a[href|="/rbpd33"], a[href|="/rfsfear"] {
     background-position: -210px -210px
+    }
+a[href|="/bpd34"], a[href|="/sbshake"] {
+    background-position: -0px -280px
+    }
+a[href|="/rbpd34"], a[href|="/rsbshake"] {
+    background-position: -210px -280px
+    }
+a[href|="/bpd35"], a[href|="/babssmirk"] {
+    background-position: -0px -350px
+    }
+a[href|="/rbpd35"], a[href|="/rbabssmirk"] {
+    background-position: -210px -350px
+    }
+a[href|="/bpd36"], a[href|="/trixiestahp"] {
+    background-position: -0px -420px
+    }
+a[href|="/rbpd36"], a[href|="/rtrixiestahp"] {
+    background-position: -210px -420px
     }
 /*BPE emutes*/
 a[href|="/bpe00"], a[href|="/bpe01"], a[href|="/bpe02"], a[href|="/bpe03"], a[href|="/bpe04"], a[href|="/bpe05"], a[href|="/bpe06"], a[href|="/bpe07"], a[href|="/bpe08"], a[href|="/bpe09"], a[href|="/bpe10"], a[href|="/bpe11"], a[href|="/bpe12"], a[href|="/bpe13"], a[href|="/bpe14"], a[href|="/bpe15"], a[href|="/bpe16"], a[href|="/bpe17"], a[href|="/bpe18"], a[href|="/bpe19"], a[href|="/bpe20"], a[href|="/bpe21"], a[href|="/bpe22"], a[href|="/bpe23"], a[href|="/bpe24"], a[href|="/bpe25"], a[href|="/bpe26"], a[href|="/bpe27"], a[href|="/bpe28"], a[href|="/bpe29"], a[href|="/hairity"], a[href|="/ajnervous"], a[href|="/ajderp"], a[href|="/birdnest"], a[href|="/derpyiscanon"], a[href|="/fsexcite"], a[href|="/fssmile"], a[href|="/hiya"], a[href|="/kwuala"], a[href|="/lyraaaa"], a[href|="/rdweep"], a[href|="/rdcat"], a[href|="/rarage"], a[href|="/pphop"], a[href|="/nyx"], a[href|="/nyomnyom"], a[href|="/necklejack"], a[href|="/myaah"], a[href|="/waffleheart"], a[href|="/woona"], a[href|="/watchout"], a[href|="/twiyum"], a[href|="/twipillow"], a[href|="/twiokie"], a[href|="/tellme"], a[href|="/sweetiebot"],a[href|="/spiderity"], a[href|="/rdrage"], a[href|="/rdjoy"], a[href|="/noname"], a[href|="/rbpe00"], a[href|="/rbpe01"], a[href|="/rbpe02"], a[href|="/rbpe03"], a[href|="/rbpe04"], a[href|="/rbpe05"], a[href|="/rbpe06"], a[href|="/rbpe07"], a[href|="/rbpe08"], a[href|="/rbpe09"], a[href|="/rbpe10"], a[href|="/rbpe11"], a[href|="/rbpe12"], a[href|="/rbpe13"], a[href|="/rbpe14"], a[href|="/rbpe15"], a[href|="/rbpe16"], a[href|="/rbpe17"], a[href|="/rbpe18"], a[href|="/rbpe19"], a[href|="/rbpe20"], a[href|="/rbpe21"], a[href|="/rbpe22"], a[href|="/rbpe23"], a[href|="/rbpe24"], a[href|="/rbpe25"], a[href|="/rbpe26"], a[href|="/rbpe27"], a[href|="/rbpe28"], a[href|="/rbpe29"], a[href|="/rhairity"], a[href|="/rajnervous"], a[href|="/rajderp"], a[href|="/rbirdnest"], a[href|="/rderpyiscanon"], a[href|="/rfsexcite"], a[href|="/rfssmile"], a[href|="/rhiya"], a[href|="/rkwuala"], a[href|="/rlyraaaa"], a[href|="/rrdweep"], a[href|="/rrdcat"], a[href|="/rrarage"], a[href|="/rpphop"], a[href|="/rnyx"], a[href|="/rnyomnyom"], a[href|="/rnecklejack"], a[href|="/rmyaah"], a[href|="/rwaffleheart"], a[href|="/rwoona"], a[href|="/rwatchout"], a[href|="/rtwiyum"], a[href|="/rtwipillow"], a[href|="/rtwiokie"], a[href|="/rtellme"], a[href|="/rsweetiebot"],a[href|="/rspiderity"], a[href|="/rrdrage"], a[href|="/rrdjoy"], a[href|="/rnoname"] {
